proyecto/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID np_create_global SEMI vars program_1 np_end_program
Rule 2     program -> PROGRAM ID np_create_global SEMI program_1 np_end_program
Rule 3     program_1 -> function program_1
Rule 4     program_1 -> main_block
Rule 5     vars -> vars_1
Rule 6     vars_1 -> LET vars_prima_1 vars_1
Rule 7     vars_1 -> LET vars_prima_1
Rule 8     vars_prima_1 -> ID COLON type np_add_vars SEMI
Rule 9     vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1
Rule 10    type -> INT type_1
Rule 11    type -> FLOAT type_1
Rule 12    type -> CHAR type_1
Rule 13    type -> BOOL type_1
Rule 14    type_1 -> LBRACKET CTEI RBRACKET
Rule 15    type_1 -> epsilon
Rule 16    function -> FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN np_set_func_start_point block np_end_function
Rule 17    function -> FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN np_set_func_start_point block np_end_function
Rule 18    function -> FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN vars np_set_func_start_point block np_end_function
Rule 19    function -> FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN vars np_set_func_start_point block np_end_function
Rule 20    main_block -> MAIN np_create_main_scope LPAREN RPAREN block np_end_main
Rule 21    main_block -> MAIN np_create_main_scope LPAREN RPAREN vars block np_end_main
Rule 22    block -> LBRACE statements RBRACE
Rule 23    return_type -> VOID
Rule 24    return_type -> type
Rule 25    params -> ID COLON type np_add_vars np_add_params_type COMMA params
Rule 26    params -> ID COLON type np_add_vars np_add_params_type
Rule 27    statements -> void_function_call statements1
Rule 28    statements -> assignment statements1
Rule 29    statements -> condition statements1
Rule 30    statements -> writing statements1
Rule 31    statements -> reading statements1
Rule 32    statements -> repetition statements1
Rule 33    statements -> return statements1
Rule 34    special_functions -> mean
Rule 35    special_functions -> median
Rule 36    special_functions -> variance
Rule 37    special_functions -> p_variance
Rule 38    special_functions -> standard_deviation
Rule 39    special_functions -> p_standard_deviation
Rule 40    statements1 -> statements
Rule 41    statements1 -> epsilon
Rule 42    assignment -> ID np_add_id LBRACKET np_check_is_array expression np_verify_array_dim RBRACKET np_get_array_address EQUALS np_add_operator expression np_assign_expression SEMI
Rule 43    assignment -> ID np_add_id EQUALS np_add_operator expression np_assign_expression SEMI
Rule 44    condition -> IF LPAREN expression RPAREN np_condition_gotof block np_condition_end_gotof
Rule 45    condition -> IF LPAREN expression RPAREN np_condition_gotof block ELSE np_condition_goto_else block np_condition_end_gotof
Rule 46    expression -> exp
Rule 47    expression -> expression1 np_add_quadruple_logical
Rule 48    expression -> expression0 np_add_quadruple_or_and
Rule 49    expression0 -> expression AND np_add_operator expression
Rule 50    expression0 -> expression OR np_add_operator expression
Rule 51    expression1 -> exp LT np_add_operator exp
Rule 52    expression1 -> exp LE np_add_operator exp
Rule 53    expression1 -> exp GT np_add_operator exp
Rule 54    expression1 -> exp GE np_add_operator exp
Rule 55    expression1 -> exp EQ np_add_operator exp
Rule 56    expression1 -> exp NE np_add_operator exp
Rule 57    exp -> term np_add_quadruple_sum_min
Rule 58    exp -> term np_add_quadruple_sum_min exp_1
Rule 59    exp_1 -> PLUS np_add_operator exp
Rule 60    exp_1 -> MINUS np_add_operator exp
Rule 61    term -> factor np_add_quadruple_times_div
Rule 62    term -> factor np_add_quadruple_times_div term_2
Rule 63    term_2 -> TIMES np_add_operator term
Rule 64    term_2 -> DIVIDE np_add_operator term
Rule 65    factor -> LPAREN np_add_paren expression RPAREN np_pop_paren
Rule 66    factor -> ID np_add_id LBRACKET np_check_is_array expression np_verify_array_dim RBRACKET np_get_array_address
Rule 67    factor -> factor_prima_1
Rule 68    factor -> function_call
Rule 69    factor -> special_functions
Rule 70    factor_prima_1 -> PLUS varcte
Rule 71    factor_prima_1 -> MINUS varcte
Rule 72    factor_prima_1 -> varcte
Rule 73    varcte -> ID np_add_id
Rule 74    varcte -> CTEI np_add_cte_int
Rule 75    varcte -> CTEF np_add_cte_float
Rule 76    varcte -> CTEC np_add_cte_char
Rule 77    varcte -> TRUE np_add_cte_bool
Rule 78    varcte -> FALSE np_add_cte_bool
Rule 79    writing -> PRINT LPAREN writing_1 RPAREN SEMI
Rule 80    writing_1 -> expression np_add_print_quadruple_exp COMMA writing_1
Rule 81    writing_1 -> CTESTRING np_add_print_quadruple_str COMMA writing_1
Rule 82    writing_1 -> expression np_add_print_quadruple_exp
Rule 83    writing_1 -> CTESTRING np_add_print_quadruple_str
Rule 84    reading -> READ LPAREN reading_1 RPAREN np_add_read_quadruple SEMI
Rule 85    reading_1 -> ID np_add_id
Rule 86    reading_1 -> ID np_add_id LBRACKET np_check_is_array expression np_verify_array_dim RBRACKET np_get_array_address
Rule 87    repetition -> non_conditional_loop
Rule 88    repetition -> conditional_loop
Rule 89    conditional_loop -> WHILE np_while_init LPAREN expression RPAREN np_while_expression DO block np_while_end_block
Rule 90    non_conditional_loop -> FOR LPAREN ID np_add_id EQUALS np_add_operator expression np_assign_expression_for TO expression np_non_conditional_limit BY expression RPAREN block np_non_conditional_end
Rule 91    return -> RETURN expression np_add_return_quadruple SEMI
Rule 92    function_call -> ID LPAREN np_check_function_call np_function_end_params RPAREN
Rule 93    function_call -> ID LPAREN np_check_function_call function_call_1 np_function_end_params RPAREN
Rule 94    void_function_call -> ID LPAREN np_check_function_call np_function_end_params RPAREN SEMI
Rule 95    void_function_call -> ID LPAREN np_check_function_call function_call_1 np_function_end_params RPAREN SEMI
Rule 96    function_call_1 -> expression np_function_call_add_param
Rule 97    function_call_1 -> expression np_function_call_add_param COMMA function_call_1
Rule 98    mean -> MEAN LPAREN ID RPAREN np_add_mean_quadruple
Rule 99    median -> MEDIAN LPAREN ID RPAREN np_add_median_quadruple
Rule 100   variance -> VARIANCE LPAREN ID RPAREN np_add_variance_quadruple
Rule 101   p_variance -> PVARIANCE LPAREN ID RPAREN np_add_p_variance_quadruple
Rule 102   standard_deviation -> STDEV LPAREN ID RPAREN np_add_stdev_quadruple
Rule 103   p_standard_deviation -> PSTDEV LPAREN ID RPAREN np_add_p_stdev_quadruple
Rule 104   epsilon -> <empty>
Rule 105   np_create_global -> <empty>
Rule 106   np_create_main_scope -> <empty>
Rule 107   np_create_new_scope -> <empty>
Rule 108   np_add_satck_vars -> <empty>
Rule 109   np_add_vars -> <empty>
Rule 110   np_add_id -> <empty>
Rule 111   np_add_cte_int -> <empty>
Rule 112   np_add_cte_float -> <empty>
Rule 113   np_add_cte_char -> <empty>
Rule 114   np_add_cte_bool -> <empty>
Rule 115   np_add_operator -> <empty>
Rule 116   np_add_paren -> <empty>
Rule 117   np_pop_paren -> <empty>
Rule 118   np_add_quadruple_sum_min -> <empty>
Rule 119   np_add_quadruple_times_div -> <empty>
Rule 120   np_add_quadruple_logical -> <empty>
Rule 121   np_add_quadruple_or_and -> <empty>
Rule 122   np_assign_expression -> <empty>
Rule 123   np_condition_gotof -> <empty>
Rule 124   np_condition_end_gotof -> <empty>
Rule 125   np_condition_goto_else -> <empty>
Rule 126   np_while_init -> <empty>
Rule 127   np_while_expression -> <empty>
Rule 128   np_while_end_block -> <empty>
Rule 129   np_assign_expression_for -> <empty>
Rule 130   np_non_conditional_limit -> <empty>
Rule 131   np_non_conditional_end -> <empty>
Rule 132   np_add_print_quadruple_str -> <empty>
Rule 133   np_add_print_quadruple_exp -> <empty>
Rule 134   np_add_return_quadruple -> <empty>
Rule 135   np_add_params_type -> <empty>
Rule 136   np_set_func_start_point -> <empty>
Rule 137   np_end_function -> <empty>
Rule 138   np_end_main -> <empty>
Rule 139   np_end_program -> <empty>
Rule 140   np_check_function_call -> <empty>
Rule 141   np_function_call_add_param -> <empty>
Rule 142   np_function_end_params -> <empty>
Rule 143   np_check_is_array -> <empty>
Rule 144   np_verify_array_dim -> <empty>
Rule 145   np_get_array_address -> <empty>
Rule 146   np_add_read_quadruple -> <empty>
Rule 147   np_add_mean_quadruple -> <empty>
Rule 148   np_add_median_quadruple -> <empty>
Rule 149   np_add_variance_quadruple -> <empty>
Rule 150   np_add_p_variance_quadruple -> <empty>
Rule 151   np_add_stdev_quadruple -> <empty>
Rule 152   np_add_p_stdev_quadruple -> <empty>

Terminals, with rules where they appear

AND                  : 49
BOOL                 : 13
BY                   : 90
CHAR                 : 12
COLON                : 8 16 17 18 19 25 26
COMMA                : 9 25 80 81 97
CTEC                 : 76
CTEF                 : 75
CTEI                 : 14 74
CTESTRING            : 81 83
DIVIDE               : 64
DO                   : 89
ELSE                 : 45
EQ                   : 55
EQUALS               : 42 43 90
FALSE                : 78
FLOAT                : 11
FOR                  : 90
FUNCTION             : 16 17 18 19
GE                   : 54
GT                   : 53
ID                   : 1 2 8 9 16 17 18 19 25 26 42 43 66 73 85 86 90 92 93 94 95 98 99 100 101 102 103
IF                   : 44 45
INT                  : 10
LBRACE               : 22
LBRACKET             : 14 42 66 86
LE                   : 52
LET                  : 6 7
LPAREN               : 16 17 18 19 20 21 44 45 65 79 84 89 90 92 93 94 95 98 99 100 101 102 103
LT                   : 51
MAIN                 : 20 21
MEAN                 : 98
MEDIAN               : 99
MINUS                : 60 71
NE                   : 56
OR                   : 50
PLUS                 : 59 70
PRINT                : 79
PROGRAM              : 1 2
PSTDEV               : 103
PVARIANCE            : 101
RBRACE               : 22
RBRACKET             : 14 42 66 86
READ                 : 84
RETURN               : 91
RPAREN               : 16 17 18 19 20 21 44 45 65 79 84 89 90 92 93 94 95 98 99 100 101 102 103
SEMI                 : 1 2 8 42 43 79 84 91 94 95
STDEV                : 102
TIMES                : 63
TO                   : 90
TRUE                 : 77
VARIANCE             : 100
VOID                 : 23
WHILE                : 89
error                : 

Nonterminals, with rules where they appear

assignment           : 28
block                : 16 17 18 19 20 21 44 45 45 89 90
condition            : 29
conditional_loop     : 88
epsilon              : 15 41
exp                  : 46 51 51 52 52 53 53 54 54 55 55 56 56 59 60
exp_1                : 58
expression           : 42 42 43 44 45 49 49 50 50 65 66 80 82 86 89 90 90 90 91 96 97
expression0          : 48
expression1          : 47
factor               : 61 62
factor_prima_1       : 67
function             : 3
function_call        : 68
function_call_1      : 93 95 97
main_block           : 4
mean                 : 34
median               : 35
non_conditional_loop : 87
np_add_cte_bool      : 77 78
np_add_cte_char      : 76
np_add_cte_float     : 75
np_add_cte_int       : 74
np_add_id            : 42 43 66 73 85 86 90
np_add_mean_quadruple : 98
np_add_median_quadruple : 99
np_add_operator      : 42 43 49 50 51 52 53 54 55 56 59 60 63 64 90
np_add_p_stdev_quadruple : 103
np_add_p_variance_quadruple : 101
np_add_params_type   : 25 26
np_add_paren         : 65
np_add_print_quadruple_exp : 80 82
np_add_print_quadruple_str : 81 83
np_add_quadruple_logical : 47
np_add_quadruple_or_and : 48
np_add_quadruple_sum_min : 57 58
np_add_quadruple_times_div : 61 62
np_add_read_quadruple : 84
np_add_return_quadruple : 91
np_add_satck_vars    : 9
np_add_stdev_quadruple : 102
np_add_variance_quadruple : 100
np_add_vars          : 8 25 26
np_assign_expression : 42 43
np_assign_expression_for : 90
np_check_function_call : 92 93 94 95
np_check_is_array    : 42 66 86
np_condition_end_gotof : 44 45
np_condition_goto_else : 45
np_condition_gotof   : 44 45
np_create_global     : 1 2
np_create_main_scope : 20 21
np_create_new_scope  : 16 17 18 19
np_end_function      : 16 17 18 19
np_end_main          : 20 21
np_end_program       : 1 2
np_function_call_add_param : 96 97
np_function_end_params : 92 93 94 95
np_get_array_address : 42 66 86
np_non_conditional_end : 90
np_non_conditional_limit : 90
np_pop_paren         : 65
np_set_func_start_point : 16 17 18 19
np_verify_array_dim  : 42 66 86
np_while_end_block   : 89
np_while_expression  : 89
np_while_init        : 89
p_standard_deviation : 39
p_variance           : 37
params               : 17 19 25
program              : 0
program_1            : 1 2 3
reading              : 31
reading_1            : 84
repetition           : 32
return               : 33
return_type          : 16 17 18 19
special_functions    : 69
standard_deviation   : 38
statements           : 22 40
statements1          : 27 28 29 30 31 32 33
term                 : 57 58 63 64
term_2               : 62
type                 : 8 24 25 26
type_1               : 10 11 12 13
varcte               : 70 71 72
variance             : 36
vars                 : 1 18 19 21
vars_1               : 5 6
vars_prima_1         : 6 7 9
void_function_call   : 27
writing              : 30
writing_1            : 79 80 81

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID np_create_global SEMI vars program_1 np_end_program
    (2) program -> . PROGRAM ID np_create_global SEMI program_1 np_end_program

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID np_create_global SEMI vars program_1 np_end_program
    (2) program -> PROGRAM . ID np_create_global SEMI program_1 np_end_program

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . np_create_global SEMI vars program_1 np_end_program
    (2) program -> PROGRAM ID . np_create_global SEMI program_1 np_end_program
    (105) np_create_global -> .

    SEMI            reduce using rule 105 (np_create_global -> .)

    np_create_global               shift and go to state 4

state 4

    (1) program -> PROGRAM ID np_create_global . SEMI vars program_1 np_end_program
    (2) program -> PROGRAM ID np_create_global . SEMI program_1 np_end_program

    SEMI            shift and go to state 5


state 5

    (1) program -> PROGRAM ID np_create_global SEMI . vars program_1 np_end_program
    (2) program -> PROGRAM ID np_create_global SEMI . program_1 np_end_program
    (5) vars -> . vars_1
    (3) program_1 -> . function program_1
    (4) program_1 -> . main_block
    (6) vars_1 -> . LET vars_prima_1 vars_1
    (7) vars_1 -> . LET vars_prima_1
    (16) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN np_set_func_start_point block np_end_function
    (17) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN np_set_func_start_point block np_end_function
    (18) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN vars np_set_func_start_point block np_end_function
    (19) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN vars np_set_func_start_point block np_end_function
    (20) main_block -> . MAIN np_create_main_scope LPAREN RPAREN block np_end_main
    (21) main_block -> . MAIN np_create_main_scope LPAREN RPAREN vars block np_end_main

    LET             shift and go to state 11
    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13

    vars                           shift and go to state 6
    program_1                      shift and go to state 7
    vars_1                         shift and go to state 8
    function                       shift and go to state 9
    main_block                     shift and go to state 10

state 6

    (1) program -> PROGRAM ID np_create_global SEMI vars . program_1 np_end_program
    (3) program_1 -> . function program_1
    (4) program_1 -> . main_block
    (16) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN np_set_func_start_point block np_end_function
    (17) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN np_set_func_start_point block np_end_function
    (18) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN vars np_set_func_start_point block np_end_function
    (19) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN vars np_set_func_start_point block np_end_function
    (20) main_block -> . MAIN np_create_main_scope LPAREN RPAREN block np_end_main
    (21) main_block -> . MAIN np_create_main_scope LPAREN RPAREN vars block np_end_main

    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13

    program_1                      shift and go to state 14
    function                       shift and go to state 9
    main_block                     shift and go to state 10

state 7

    (2) program -> PROGRAM ID np_create_global SEMI program_1 . np_end_program
    (139) np_end_program -> .

    $end            reduce using rule 139 (np_end_program -> .)

    np_end_program                 shift and go to state 15

state 8

    (5) vars -> vars_1 .

    FUNCTION        reduce using rule 5 (vars -> vars_1 .)
    MAIN            reduce using rule 5 (vars -> vars_1 .)
    LBRACE          reduce using rule 5 (vars -> vars_1 .)


state 9

    (3) program_1 -> function . program_1
    (3) program_1 -> . function program_1
    (4) program_1 -> . main_block
    (16) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN np_set_func_start_point block np_end_function
    (17) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN np_set_func_start_point block np_end_function
    (18) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN vars np_set_func_start_point block np_end_function
    (19) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN vars np_set_func_start_point block np_end_function
    (20) main_block -> . MAIN np_create_main_scope LPAREN RPAREN block np_end_main
    (21) main_block -> . MAIN np_create_main_scope LPAREN RPAREN vars block np_end_main

    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13

    function                       shift and go to state 9
    program_1                      shift and go to state 16
    main_block                     shift and go to state 10

state 10

    (4) program_1 -> main_block .

    $end            reduce using rule 4 (program_1 -> main_block .)


state 11

    (6) vars_1 -> LET . vars_prima_1 vars_1
    (7) vars_1 -> LET . vars_prima_1
    (8) vars_prima_1 -> . ID COLON type np_add_vars SEMI
    (9) vars_prima_1 -> . ID np_add_satck_vars COMMA vars_prima_1

    ID              shift and go to state 18

    vars_prima_1                   shift and go to state 17

state 12

    (16) function -> FUNCTION . ID COLON return_type np_create_new_scope LPAREN RPAREN np_set_func_start_point block np_end_function
    (17) function -> FUNCTION . ID COLON return_type np_create_new_scope LPAREN params RPAREN np_set_func_start_point block np_end_function
    (18) function -> FUNCTION . ID COLON return_type np_create_new_scope LPAREN RPAREN vars np_set_func_start_point block np_end_function
    (19) function -> FUNCTION . ID COLON return_type np_create_new_scope LPAREN params RPAREN vars np_set_func_start_point block np_end_function

    ID              shift and go to state 19


state 13

    (20) main_block -> MAIN . np_create_main_scope LPAREN RPAREN block np_end_main
    (21) main_block -> MAIN . np_create_main_scope LPAREN RPAREN vars block np_end_main
    (106) np_create_main_scope -> .

    LPAREN          reduce using rule 106 (np_create_main_scope -> .)

    np_create_main_scope           shift and go to state 20

state 14

    (1) program -> PROGRAM ID np_create_global SEMI vars program_1 . np_end_program
    (139) np_end_program -> .

    $end            reduce using rule 139 (np_end_program -> .)

    np_end_program                 shift and go to state 21

state 15

    (2) program -> PROGRAM ID np_create_global SEMI program_1 np_end_program .

    $end            reduce using rule 2 (program -> PROGRAM ID np_create_global SEMI program_1 np_end_program .)


state 16

    (3) program_1 -> function program_1 .

    $end            reduce using rule 3 (program_1 -> function program_1 .)


state 17

    (6) vars_1 -> LET vars_prima_1 . vars_1
    (7) vars_1 -> LET vars_prima_1 .
    (6) vars_1 -> . LET vars_prima_1 vars_1
    (7) vars_1 -> . LET vars_prima_1

    FUNCTION        reduce using rule 7 (vars_1 -> LET vars_prima_1 .)
    MAIN            reduce using rule 7 (vars_1 -> LET vars_prima_1 .)
    LBRACE          reduce using rule 7 (vars_1 -> LET vars_prima_1 .)
    LET             shift and go to state 11

    vars_1                         shift and go to state 22

state 18

    (8) vars_prima_1 -> ID . COLON type np_add_vars SEMI
    (9) vars_prima_1 -> ID . np_add_satck_vars COMMA vars_prima_1
    (108) np_add_satck_vars -> .

    COLON           shift and go to state 23
    COMMA           reduce using rule 108 (np_add_satck_vars -> .)

    np_add_satck_vars              shift and go to state 24

state 19

    (16) function -> FUNCTION ID . COLON return_type np_create_new_scope LPAREN RPAREN np_set_func_start_point block np_end_function
    (17) function -> FUNCTION ID . COLON return_type np_create_new_scope LPAREN params RPAREN np_set_func_start_point block np_end_function
    (18) function -> FUNCTION ID . COLON return_type np_create_new_scope LPAREN RPAREN vars np_set_func_start_point block np_end_function
    (19) function -> FUNCTION ID . COLON return_type np_create_new_scope LPAREN params RPAREN vars np_set_func_start_point block np_end_function

    COLON           shift and go to state 25


state 20

    (20) main_block -> MAIN np_create_main_scope . LPAREN RPAREN block np_end_main
    (21) main_block -> MAIN np_create_main_scope . LPAREN RPAREN vars block np_end_main

    LPAREN          shift and go to state 26


state 21

    (1) program -> PROGRAM ID np_create_global SEMI vars program_1 np_end_program .

    $end            reduce using rule 1 (program -> PROGRAM ID np_create_global SEMI vars program_1 np_end_program .)


state 22

    (6) vars_1 -> LET vars_prima_1 vars_1 .

    FUNCTION        reduce using rule 6 (vars_1 -> LET vars_prima_1 vars_1 .)
    MAIN            reduce using rule 6 (vars_1 -> LET vars_prima_1 vars_1 .)
    LBRACE          reduce using rule 6 (vars_1 -> LET vars_prima_1 vars_1 .)


state 23

    (8) vars_prima_1 -> ID COLON . type np_add_vars SEMI
    (10) type -> . INT type_1
    (11) type -> . FLOAT type_1
    (12) type -> . CHAR type_1
    (13) type -> . BOOL type_1

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    CHAR            shift and go to state 30
    BOOL            shift and go to state 31

    type                           shift and go to state 27

state 24

    (9) vars_prima_1 -> ID np_add_satck_vars . COMMA vars_prima_1

    COMMA           shift and go to state 32


state 25

    (16) function -> FUNCTION ID COLON . return_type np_create_new_scope LPAREN RPAREN np_set_func_start_point block np_end_function
    (17) function -> FUNCTION ID COLON . return_type np_create_new_scope LPAREN params RPAREN np_set_func_start_point block np_end_function
    (18) function -> FUNCTION ID COLON . return_type np_create_new_scope LPAREN RPAREN vars np_set_func_start_point block np_end_function
    (19) function -> FUNCTION ID COLON . return_type np_create_new_scope LPAREN params RPAREN vars np_set_func_start_point block np_end_function
    (23) return_type -> . VOID
    (24) return_type -> . type
    (10) type -> . INT type_1
    (11) type -> . FLOAT type_1
    (12) type -> . CHAR type_1
    (13) type -> . BOOL type_1

    VOID            shift and go to state 34
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    CHAR            shift and go to state 30
    BOOL            shift and go to state 31

    return_type                    shift and go to state 33
    type                           shift and go to state 35

state 26

    (20) main_block -> MAIN np_create_main_scope LPAREN . RPAREN block np_end_main
    (21) main_block -> MAIN np_create_main_scope LPAREN . RPAREN vars block np_end_main

    RPAREN          shift and go to state 36


state 27

    (8) vars_prima_1 -> ID COLON type . np_add_vars SEMI
    (109) np_add_vars -> .

    SEMI            reduce using rule 109 (np_add_vars -> .)

    np_add_vars                    shift and go to state 37

state 28

    (10) type -> INT . type_1
    (14) type_1 -> . LBRACKET CTEI RBRACKET
    (15) type_1 -> . epsilon
    (104) epsilon -> .

    LBRACKET        shift and go to state 39
    SEMI            reduce using rule 104 (epsilon -> .)
    LPAREN          reduce using rule 104 (epsilon -> .)
    COMMA           reduce using rule 104 (epsilon -> .)
    RPAREN          reduce using rule 104 (epsilon -> .)

    type_1                         shift and go to state 38
    epsilon                        shift and go to state 40

state 29

    (11) type -> FLOAT . type_1
    (14) type_1 -> . LBRACKET CTEI RBRACKET
    (15) type_1 -> . epsilon
    (104) epsilon -> .

    LBRACKET        shift and go to state 39
    SEMI            reduce using rule 104 (epsilon -> .)
    LPAREN          reduce using rule 104 (epsilon -> .)
    COMMA           reduce using rule 104 (epsilon -> .)
    RPAREN          reduce using rule 104 (epsilon -> .)

    type_1                         shift and go to state 41
    epsilon                        shift and go to state 40

state 30

    (12) type -> CHAR . type_1
    (14) type_1 -> . LBRACKET CTEI RBRACKET
    (15) type_1 -> . epsilon
    (104) epsilon -> .

    LBRACKET        shift and go to state 39
    SEMI            reduce using rule 104 (epsilon -> .)
    LPAREN          reduce using rule 104 (epsilon -> .)
    COMMA           reduce using rule 104 (epsilon -> .)
    RPAREN          reduce using rule 104 (epsilon -> .)

    type_1                         shift and go to state 42
    epsilon                        shift and go to state 40

state 31

    (13) type -> BOOL . type_1
    (14) type_1 -> . LBRACKET CTEI RBRACKET
    (15) type_1 -> . epsilon
    (104) epsilon -> .

    LBRACKET        shift and go to state 39
    SEMI            reduce using rule 104 (epsilon -> .)
    LPAREN          reduce using rule 104 (epsilon -> .)
    COMMA           reduce using rule 104 (epsilon -> .)
    RPAREN          reduce using rule 104 (epsilon -> .)

    type_1                         shift and go to state 43
    epsilon                        shift and go to state 40

state 32

    (9) vars_prima_1 -> ID np_add_satck_vars COMMA . vars_prima_1
    (8) vars_prima_1 -> . ID COLON type np_add_vars SEMI
    (9) vars_prima_1 -> . ID np_add_satck_vars COMMA vars_prima_1

    ID              shift and go to state 18

    vars_prima_1                   shift and go to state 44

state 33

    (16) function -> FUNCTION ID COLON return_type . np_create_new_scope LPAREN RPAREN np_set_func_start_point block np_end_function
    (17) function -> FUNCTION ID COLON return_type . np_create_new_scope LPAREN params RPAREN np_set_func_start_point block np_end_function
    (18) function -> FUNCTION ID COLON return_type . np_create_new_scope LPAREN RPAREN vars np_set_func_start_point block np_end_function
    (19) function -> FUNCTION ID COLON return_type . np_create_new_scope LPAREN params RPAREN vars np_set_func_start_point block np_end_function
    (107) np_create_new_scope -> .

    LPAREN          reduce using rule 107 (np_create_new_scope -> .)

    np_create_new_scope            shift and go to state 45

state 34

    (23) return_type -> VOID .

    LPAREN          reduce using rule 23 (return_type -> VOID .)


state 35

    (24) return_type -> type .

    LPAREN          reduce using rule 24 (return_type -> type .)


state 36

    (20) main_block -> MAIN np_create_main_scope LPAREN RPAREN . block np_end_main
    (21) main_block -> MAIN np_create_main_scope LPAREN RPAREN . vars block np_end_main
    (22) block -> . LBRACE statements RBRACE
    (5) vars -> . vars_1
    (6) vars_1 -> . LET vars_prima_1 vars_1
    (7) vars_1 -> . LET vars_prima_1

    LBRACE          shift and go to state 48
    LET             shift and go to state 11

    block                          shift and go to state 46
    vars                           shift and go to state 47
    vars_1                         shift and go to state 8

state 37

    (8) vars_prima_1 -> ID COLON type np_add_vars . SEMI

    SEMI            shift and go to state 49


state 38

    (10) type -> INT type_1 .

    SEMI            reduce using rule 10 (type -> INT type_1 .)
    LPAREN          reduce using rule 10 (type -> INT type_1 .)
    COMMA           reduce using rule 10 (type -> INT type_1 .)
    RPAREN          reduce using rule 10 (type -> INT type_1 .)


state 39

    (14) type_1 -> LBRACKET . CTEI RBRACKET

    CTEI            shift and go to state 50


state 40

    (15) type_1 -> epsilon .

    SEMI            reduce using rule 15 (type_1 -> epsilon .)
    LPAREN          reduce using rule 15 (type_1 -> epsilon .)
    COMMA           reduce using rule 15 (type_1 -> epsilon .)
    RPAREN          reduce using rule 15 (type_1 -> epsilon .)


state 41

    (11) type -> FLOAT type_1 .

    SEMI            reduce using rule 11 (type -> FLOAT type_1 .)
    LPAREN          reduce using rule 11 (type -> FLOAT type_1 .)
    COMMA           reduce using rule 11 (type -> FLOAT type_1 .)
    RPAREN          reduce using rule 11 (type -> FLOAT type_1 .)


state 42

    (12) type -> CHAR type_1 .

    SEMI            reduce using rule 12 (type -> CHAR type_1 .)
    LPAREN          reduce using rule 12 (type -> CHAR type_1 .)
    COMMA           reduce using rule 12 (type -> CHAR type_1 .)
    RPAREN          reduce using rule 12 (type -> CHAR type_1 .)


state 43

    (13) type -> BOOL type_1 .

    SEMI            reduce using rule 13 (type -> BOOL type_1 .)
    LPAREN          reduce using rule 13 (type -> BOOL type_1 .)
    COMMA           reduce using rule 13 (type -> BOOL type_1 .)
    RPAREN          reduce using rule 13 (type -> BOOL type_1 .)


state 44

    (9) vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1 .

    LET             reduce using rule 9 (vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1 .)
    FUNCTION        reduce using rule 9 (vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1 .)
    MAIN            reduce using rule 9 (vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1 .)
    LBRACE          reduce using rule 9 (vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1 .)


state 45

    (16) function -> FUNCTION ID COLON return_type np_create_new_scope . LPAREN RPAREN np_set_func_start_point block np_end_function
    (17) function -> FUNCTION ID COLON return_type np_create_new_scope . LPAREN params RPAREN np_set_func_start_point block np_end_function
    (18) function -> FUNCTION ID COLON return_type np_create_new_scope . LPAREN RPAREN vars np_set_func_start_point block np_end_function
    (19) function -> FUNCTION ID COLON return_type np_create_new_scope . LPAREN params RPAREN vars np_set_func_start_point block np_end_function

    LPAREN          shift and go to state 51


state 46

    (20) main_block -> MAIN np_create_main_scope LPAREN RPAREN block . np_end_main
    (138) np_end_main -> .

    $end            reduce using rule 138 (np_end_main -> .)

    np_end_main                    shift and go to state 52

state 47

    (21) main_block -> MAIN np_create_main_scope LPAREN RPAREN vars . block np_end_main
    (22) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 48

    block                          shift and go to state 53

state 48
